<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings_main_toolbar"
        android:title="@string/main_fragment_setting"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings"
        />

    <item
        android:title="@string/main_fragment_more"
        android:icon="@drawable/ic_more"
        app:showAsAction="always">

        <!--TODO: VS Mode, Trash, Contact Us -->
        <menu>
            <item
                android:id="@+id/about_us"
                android:title="@string/about_us"
                app:showAsAction="never"/>

            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us"
                app:showAsAction="never"/>


        </menu>

    </item>

</menu>