<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_dialog"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:maxHeight="200dp"
        android:minHeight="100dp"
        android:src="@drawable/ic_secure_dialog"
        android:layout_gravity="center|top"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:focusableInTouchMode="true"
        android:theme="@style/CustomTheme"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="?android:textColorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="16dp"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ic_cancel_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/customColorHighlight"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_toStartOf="@id/ic_done_dialog"
                app:rippleColor="@color/customColorHighlight"
                android:layout_marginEnd="12dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ic_done_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/done"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/customColorHighlight"
                />

        </RelativeLayout>
</LinearLayout>