<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_frame_layout"
    tools:context=".EditFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/edit_app_bar"
            >
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:id="@+id/edit_tool_bar"
                android:theme="@style/Widget.AppCompat.PopupMenu.Overflow"
                />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:id="@+id/edit_nested_scroll"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/Title"
                    app:boxBackgroundColor="@color/colorPrimary"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorAccent"
                    app:boxStrokeWidth="1dp"
                    android:theme="@style/CustomTheme"

                    app:hintTextColor="?android:textColorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_title_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="sans-serif-light"
                        android:inputType="text|textCapWords"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_content_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/write_note"
                    android:theme="@style/CustomTheme"
                    app:boxBackgroundColor="@color/colorPrimary"
                    app:boxStrokeColor="@color/colorAccent"
                    app:boxStrokeWidth="1dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="4800"
                    app:helperText="@string/chips"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="?android:textColorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_title_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_content_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="sans-serif-light"
                        android:gravity="top|start"
                        android:maxLength="4800"
                        android:minHeight="120dp"
                        android:textColor="@color/colorAccent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:minHeight="90dp"
                    app:chipSpacing="4dp"
                    android:id="@+id/edit_chip_group"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_content_layout" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/private_switch_material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/private_"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:useMaterialThemeColors="true"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/edit_password_layout"
                    app:layout_constraintTop_toBottomOf="@+id/edit_chip_group" />

                <com.google.android.material.textfield.TextInputLayout
                    android:visibility="gone"
                    android:id="@+id/edit_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    android:theme="@style/CustomTheme"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintTextColor="?android:textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/private_switch_material">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_password_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        />


                </com.google.android.material.textfield.TextInputLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>